--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br>COOLSHAWARA</strong></h1>
+                            <h1 class="m-b-20"><strong>Welcome to <br>COOLSHAWARA</strong></h1>
                             <p class="m-b-40">Cultivating Abundance,Nurturing the land <br> Growing Futures Together</p>
                             <p><a class="btn hvr-hover" href="#">Shop New</a></p>
                         </div>
