--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <div class="type-lb">
                                 <p class="sale">Sale</p>
                             </div>
-                            <img src="images/" class="img-fluid" alt="Image">
+                            <img src="images/kukuu.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
@@ -330,8 +330,8 @@
                             </div>
                         </div>
                         <div class="why-text">
-                            <h4>Lorem ipsum dolor sit amet</h4>
-                            <h5> $7.79</h5>
+                            <h4>Chicken</h4>
+                            <h5>700/kg</h5>
                         </div>
                     </div>
                 </div>
@@ -416,7 +416,7 @@
                 <div class="col-lg-12">
                     <div class="title-all text-center">
                         <h1>latest blog</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet lacus enim.</p>
+                        <p>Catch about the latest news about farming</p>
                     </div>
                 </div>
             </div>
@@ -428,8 +428,10 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>Zero foodprints bold plan.
+                                Turning the U.S food system into a climate solution</h3>
+                                <p>Zero Foodprint, a nonprofit dedicated to mobilizing resources for regenerative agriculture, is calling for a transformative shift in how the United States food system funds sustainable practices. In a recent paper,
+                                    They argue for a new economic model of collective action to directly support regenerative farming and combat the climate crisis. </p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#"><i class="far fa-heart"></i></a></li>
@@ -446,8 +448,9 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>Inovation For sustainability</h3>
+                                <p> The U.S. Food and Drug Administration (FDA) recently reported a 71 percent decline in U.S. sales of antimicrobial drugs for use in chicken production over the last seven years. As farmers explore alternative means of supporting chicken health and growth, Phytoflock is pioneering a poultry feed additive derived from upcycled grape pomace.
+                                    The company hopes their product can replace antibiotics while helping to reduce local food waste.</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#"><i class="far fa-heart"></i></a></li>
@@ -464,8 +467,10 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>Sustainable Agriculture</h3>
+                                <p> The Farmhand Foundation (FHF) is working to help growers in Southern California transition to organic practices. They serve farmers through education, advocacy, and access to resources.
+
+Justin Herber, Griffin Barkley, and Justin Schneir started FHF in Ojai, California to support farmers who want to use more sustainable practices, but may not know where to start. According to the U.S. Department of Agriculture, only 1 percent of farmland in the United States is organic.</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#"><i class="far fa-heart"></i></a></li>
@@ -578,7 +583,7 @@
 						<div class="footer-top-box">
 							<h3>Business Time</h3>
 							<ul class="list-time">
-								<li>Monday - Friday: 08.00am to 05.00pm</li> <li>Saturday: 10.00am to 08.00pm</li> <li>Sunday: <span>Closed</span></li>
+								<li>Monday - Friday: 08.00am to 05.00pm</li> <li>Sunday: 10.00am to 08.00pm</li> <li>Saturday: <span>Closed</span></li>
 							</ul>
 						</div>
 					</div>
@@ -597,7 +602,7 @@
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="footer-top-box">
 							<h3>Social Media</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<p>Find and connect with us on the following sites</p>
 							<ul>
                                 <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -614,9 +619,10 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
-                            <h4>About Freshshop</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> 							
+                            <h4>About COOLSHAWARA</h4>
+                            <p>At Coolshawara Farms, we’re passionate about bringing the freshest,
+                                highest-quality produce from our fields directly to your table. </p>
+							<p> </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12">
@@ -637,13 +643,13 @@
                             <h4>Contact Us</h4>
                             <ul>
                                 <li>
-                                    <p><i class="fas fa-map-marker-alt"></i>Address: Michael I. Days 3756 <br>Preston Street Wichita,<br> KS 67213 </p>
+                                    <p><i class="fas fa-map-marker-alt"></i>Address: 132 69 <br>Kang'undo road Nairobi,<br> KENYA </p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+1-888705770">+1-888 705 770</a></p>
+                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+254 797 584 227">+254 797 584 227</a></p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-envelope"></i>Email: <a href="mailto:contactinfo@gmail.com">contactinfo@gmail.com</a></p>
+                                    <p><i class="fas fa-envelope"></i>Email: <a href="coolshawarasuppliersltd@gmail.com">coolshawarasuppliersltd@gmail.com</a></p>
                                 </li>
                             </ul>
                         </div>
@@ -656,8 +662,8 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
+        <p class="footer-company">All Rights Reserved. &copy; 2025 <a href=" https://randylomo1.github.io/coolshawara/">COOLSHAWARA</a> Design By :
+            <a href="https://github.com/Randylomo1">Randylomo1</a></p>
     </div>
     <!-- End copyright  -->
 
