--- a/about.html
+++ b/about.html
@@ -217,16 +217,17 @@
         <div class="container">
             <div class="row">
 				<div class="col-lg-6">
-                    <div class="banner-frame"> <img class="img-fluid" src="images/about-img.jpg" alt="" />
+                    <div class="banner-frame"> <img class="img-fluid" src="images/kkkk.jpg" alt="" />
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h2 class="noo-sh-title-top">We are <span>Freshshop</span></h2>
-                    <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                        voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-                        sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
-                        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h2 class="noo-sh-title-top">We are <span>COOLSHAWARA</span></h2>
+                    <p>At Coolshawara Farms, we’re passionate about bringing the freshest, highest-quality produce from our fields directly to your table. Rooted in tradition and driven by innovation, our farm combines sustainable farming practices with cutting-edge technology to cultivate a wide variety of crops that nourish both the land and the community.
+
+Our commitment to environmental stewardship and ethical practices means we’re always working to improve our processes, reduce our footprint, and ensure a future where farming and nature thrive together. Whether you’re enjoying our seasonal produce or supporting local food systems, we’re proud to be part of a movement that puts quality, sustainability, and integrity at the heart of everything we do.
+
+From our family to yours, we invite you to experience the difference of farm-fresh goodness at Coolshawara Farms </p>
+                    <p></p>
 					<a class="btn hvr-hover" href="#">Read More</a>
                 </div>
             </div>
