--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><h1>COOLSHAWARA</h1></a>
                 </div>
                 <!-- End Header Navigation -->
 
@@ -662,8 +662,8 @@ Justin Herber, Griffin Barkley, and Justin Schneir started FHF in Ojai, Californ
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2025 <a href=" https://randylomo1.github.io/coolshawara/">COOLSHAWARA</a> Design By :
-            <a href="https://github.com/Randylomo1">Randylomo1</a></p>
+        <p class="footer-company">All Rights Reserved. &copy; 2025 <a href=" ">COOLSHAWARA</a> Design By :
+            <a href="">Randylomo1</a></p>
     </div>
     <!-- End copyright  -->
 
