--- a/shop-detail.html
+++ b/shop-detail.html
@@ -158,18 +158,18 @@
                     <ul class="cart-list">
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-01.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Delica omtantur </a></h6>
-                            <p>1x - <span class="price">$80.00</span></p>
+                            <h6><a href="#">Tomatoes </a></h6>
+                            <p>4x - <span class="price">ksh690</span></p>
                         </li>
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-02.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Omnes ocurreret</a></h6>
-                            <p>1x - <span class="price">$60.00</span></p>
+                            <h6><a href="#">Bananas</a></h6>
+                            <p>3x - <span class="price">ksh750</span></p>
                         </li>
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-03.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Agam facilisis</a></h6>
-                            <p>1x - <span class="price">$40.00</span></p>
+                            <h6><a href="#">Cabbage</a></h6>
+                            <p>5x - <span class="price">ksh500</span></p>
                         </li>
                         <li class="total">
                             <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
@@ -246,8 +246,8 @@
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-6">
                     <div class="single-product-details">
-                        <h2>Fachion Lorem ipsum dolor sit amet</h2>
-                        <h5> <del>$ 60.00</del> $40.79</h5>
+                        <h2>lorem</h2>
+                        <h5> <del>ksh300</del>ksh100</h5>
                         <p class="available-stock"><span> More than 20 available / <a href="#">8 sold </a></span><p>
 						<h4>Short Description:</h4>
 						<p></p>
@@ -347,7 +347,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem </h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh650</h5>
                                 </div>
                             </div>
                         </div>
@@ -366,7 +366,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem</h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh850</h5>
                                 </div>
                             </div>
                         </div>
@@ -385,7 +385,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem </h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh700</h5>
                                 </div>
                             </div>
                         </div>
@@ -404,7 +404,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem</h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh50</h5>
                                 </div>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem </h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh500</h5>
                                 </div>
                             </div>
                         </div>
@@ -442,7 +442,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem </h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh200</h5>
                                 </div>
                             </div>
                         </div>
@@ -461,7 +461,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem </h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh100</h5>
                                 </div>
                             </div>
                         </div>
@@ -480,7 +480,7 @@
                                 </div>
                                 <div class="why-text">
                                     <h4>Lorem </h4>
-                                    <h5> $9.79</h5>
+                                    <h5>ksh80</h5>
                                 </div>
                             </div>
                         </div>
