--- a/about.html
+++ b/about.html
@@ -487,7 +487,7 @@ From our family to yours, we invite you to experience the difference of farm-fre
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="footer-top-box">
 							<h3>Social Media</h3>
-							<p>Find and connect with us on the following sites </p>
+							<p>Find and connect with us on the following sites.</p>
 							<ul>
                                 <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
