--- a/shop-detail.html
+++ b/shop-detail.html
@@ -608,7 +608,7 @@
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="footer-top-box">
 							<h3>Social Media</h3>
-							<p>Lorem .</p>
+							<p> find and connect with us on the following sites</p>
 							<ul>
                                 <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
@@ -626,7 +626,8 @@
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
                             <h4>About COOLSHAWARA</h4>
-                            <p>Lorem .</p>
+                            <p> At Coolshawara Farms, we’re passionate about bringing the freshest,
+                                highest-quality produce from our fields directly to your table.</p>
 							<p></p>
                         </div>
                     </div>
