--- a/contact-us.html
+++ b/contact-us.html
@@ -408,7 +408,8 @@
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
                             <h4>About COOLSHAWARA</h4>
-                            <p></p>
+                            <p>At Coolshawara Farms, we’re passionate about bringing the freshest,
+                                highest-quality produce from our fields directly to your table </p>
 							<p></p>
                         </div>
                     </div>
