--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 					<div class="custom-select-box">
                         <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-							<option>¥ JPY</option>
-							<option>$ USD</option>
-							<option>€ EUR</option>
+							<option> KSH</option>
+							<option> USD</option>
+							<option> UGX</option>
 						</select>
                     </div>
                     <div class="right-phone-box">
@@ -64,6 +64,7 @@
 						<select id="basic" class="selectpicker show-tick form-control" data-placeholder="Sign In">
 							<option>Register Here</option>
 							<option>Sign In</option>
+                            <option>log in</option>
 						</select>
 					</div>
                     <div class="text-slid-box">
@@ -158,22 +159,22 @@
                     <ul class="cart-list">
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-01.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Delica omtantur </a></h6>
-                            <p>1x - <span class="price">$80.00</span></p>
+                            <h6><a href="#">Carrots </a></h6>
+                            <p>1x - <span class="price">ksh80.00</span></p>
                         </li>
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-02.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Omnes ocurreret</a></h6>
-                            <p>1x - <span class="price">$60.00</span></p>
+                            <h6><a href="#">Tomatoes</a></h6>
+                            <p>1x - <span class="price">ksh60.00</span></p>
                         </li>
                         <li>
                             <a href="#" class="photo"><img src="images/img-pro-03.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Agam facilisis</a></h6>
-                            <p>1x - <span class="price">$40.00</span></p>
+                            <h6><a href="#">Kales</a></h6>
+                            <p>1x - <span class="price">ksh40.00</span></p>
                         </li>
                         <li class="total">
                             <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
-                            <span class="float-right"><strong>Total</strong>: $180.00</span>
+                            <span class="float-right"><strong>Total</strong>: ksh180.00</span>
                         </li>
                     </ul>
                 </li>
